mock-server2/ai_poc-feature-compliance_final/manifests/stg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-services-stg
  labels:
    app.kubernetes.io/instance: ai-services-stg
    app.kubernetes.io/name: ai-services-stg
  annotations:
  namespace: ai-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: ai-services-stg
    app.kubernetes.io/name: ai-services-stg
---
apiVersion: v1
kind: Service
metadata:
  name: ai-services-stg-preview
  labels:
    app.kubernetes.io/instance: ai-services-stg
    app.kubernetes.io/name: ai-services-stg
  annotations:
  namespace: ai-service
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: ai-services-stg
    app.kubernetes.io/name: ai-services-stg
